// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab border props 1`] = `
<div class="byted-tabs byted-tabs--line byted-tabs--normal">
  <div class="byted-tabs__wrap byted-tabs">
    <div class="byted-tabs__nav byted-tabs__nav--line">
      <div class="byted-tab"><span class="byted-ellipsis">标签 1</span></div>
      <div class="byted-tab byted-tab--active"><span class="byted-ellipsis">标签 2</span></div>
      <div class="byted-tab"><span class="byted-ellipsis">标签 3</span></div>
      <div class="byted-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>
    </div>
  </div>
  <div class="byted-tabs__content">
    <div class="byted-tab__pane" style="display: none;"></div>
    <div class="byted-tab__pane" style="">内容 2</div>
    <div class="byted-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab click to switch tab 1`] = `
<div class="byted-tabs byted-tabs--line byted-tabs--normal">
  <div class="byted-tabs__wrap byted-tabs byted-hairline--top-bottom">
    <div class="byted-tabs__nav byted-tabs__nav--line">
      <div class="byted-tab"><span class="byted-ellipsis">标签 1</span></div>
      <div class="byted-tab byted-tab--active"><span class="byted-ellipsis">标签 2</span></div>
      <div class="byted-tab"><span class="byted-ellipsis">标签 3</span></div>
      <div class="byted-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>
    </div>
  </div>
  <div class="byted-tabs__content">
    <div class="byted-tab__pane" style="display: none;"></div>
    <div class="byted-tab__pane" style="">内容 2</div>
    <div class="byted-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab click to switch tab 2`] = `
<div class="byted-tabs byted-tabs--line byted-tabs--normal">
  <div class="byted-tabs__wrap byted-tabs byted-hairline--top-bottom">
    <div class="byted-tabs__nav byted-tabs__nav--line">
      <div class="byted-tab"><span class="byted-ellipsis">标签 1</span></div>
      <div class="byted-tab"><span class="byted-ellipsis">标签 2</span></div>
      <div class="byted-tab byted-tab--active"><span class="byted-ellipsis">标签 3</span></div>
      <div class="byted-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="byted-tabs__content">
    <div class="byted-tab__pane" style="display: none;"></div>
    <div class="byted-tab__pane" style="display: none;">内容 2</div>
    <div class="byted-tab__pane" style="">内容 3</div>
  </div>
</div>
`;

exports[`Tab name prop 1`] = `
<div class="byted-tabs byted-tabs--line byted-tabs--normal">
  <div class="byted-tabs__wrap byted-tabs byted-hairline--top-bottom">
    <div class="byted-tabs__nav byted-tabs__nav--line">
      <div class="byted-tab byted-tab--active"><span class="byted-ellipsis">标签 1</span></div>
      <div class="byted-tab"><span class="byted-ellipsis">标签 2</span></div>
      <div class="byted-tab byted-tab--disabled"><span class="byted-ellipsis">标签 3</span></div>
      <div class="byted-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>
    </div>
  </div>
  <div class="byted-tabs__content">
    <div class="byted-tab__pane" style="">内容 1</div>
    <div class="byted-tab__pane" style="display: none;"></div>
    <div class="byted-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab render nav-left & nav-right slot 1`] = `
<div class="byted-tabs byted-tabs--line byted-tabs--normal">
  <div class="byted-tabs__wrap byted-tabs byted-hairline--top-bottom">
    <div class="byted-tabs__nav byted-tabs__nav--line">Nav Left<div class="byted-tab"><span class="byted-ellipsis">标签 1</span></div>
      <div class="byted-tab byted-tab--active"><span class="byted-ellipsis">标签 2</span></div>
      <div class="byted-tab"><span class="byted-ellipsis">标签 3</span></div>
      <div class="byted-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>Nav Right
    </div>
  </div>
  <div class="byted-tabs__content">
    <div class="byted-tab__pane" style="display: none;"></div>
    <div class="byted-tab__pane" style="">内容 2</div>
    <div class="byted-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab swipe to switch tab 1`] = `
<div class="byted-tabs byted-tabs--line byted-tabs--normal">
  <div class="byted-tabs__wrap byted-tabs byted-hairline--top-bottom">
    <div class="byted-tabs__nav byted-tabs__nav--line">
      <div class="byted-tab byted-tab--active"><span class="byted-ellipsis">标签 1</span></div>
      <div class="byted-tab"><span class="byted-ellipsis">标签 2</span></div>
      <div class="byted-tab byted-tab--disabled"><span class="byted-ellipsis">标签 3</span></div>
      <div class="byted-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>
    </div>
  </div>
  <div class="byted-tabs__content">
    <div class="byted-tab__pane" style="">内容 1</div>
    <div class="byted-tab__pane" style="display: none;"></div>
    <div class="byted-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab swipe to switch tab 2`] = `
<div class="byted-tabs byted-tabs--line byted-tabs--normal">
  <div class="byted-tabs__wrap byted-tabs byted-hairline--top-bottom">
    <div class="byted-tabs__nav byted-tabs__nav--line">
      <div class="byted-tab"><span class="byted-ellipsis">标签 1</span></div>
      <div class="byted-tab byted-tab--active"><span class="byted-ellipsis">标签 2</span></div>
      <div class="byted-tab byted-tab--disabled"><span class="byted-ellipsis">标签 3</span></div>
      <div class="byted-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="byted-tabs__content">
    <div class="byted-tab__pane" style="display: none;">内容 1</div>
    <div class="byted-tab__pane" style="">内容 2</div>
    <div class="byted-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab swipe to switch tab 3`] = `
<div class="byted-tabs byted-tabs--line byted-tabs--normal">
  <div class="byted-tabs__wrap byted-tabs byted-hairline--top-bottom">
    <div class="byted-tabs__nav byted-tabs__nav--line">
      <div class="byted-tab"><span class="byted-ellipsis">标签 1</span></div>
      <div class="byted-tab byted-tab--active"><span class="byted-ellipsis">标签 2</span></div>
      <div class="byted-tab byted-tab--disabled"><span class="byted-ellipsis">标签 3</span></div>
      <div class="byted-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="byted-tabs__content">
    <div class="byted-tab__pane" style="display: none;">内容 1</div>
    <div class="byted-tab__pane" style="">内容 2</div>
    <div class="byted-tab__pane" style="display: none;"></div>
  </div>
</div>
`;
